--- a/video.html
+++ b/video.html
@@ -31,6 +31,9 @@
     </h3>
     <input id="range" type="range" value="1" min="0.4" max="1.6" step="0.1">
 
+    <h3>Currently playing <span id="playing">nothing</span>. Select a local video to play:</h3>
+    <input id="upload" type="file" />
+
     <script src="video.js"></script>
 </body>
 
